--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,23 @@
     gap: 20px;
     margin-bottom: 10px;
 }
+
+.modal {
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(80, 165, 80);
+    z-index: 100;
+    padding:40px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.blur {
+    /* background: rgba(0, 0, 0, 0.6); */
+    backdrop-filter: blur(2px);
+}
