--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,7 @@
     /* background: rgba(0, 0, 0, 0.6); */
     backdrop-filter: blur(2px);
 }
+
+.alert {
+    background-color: rgb(61, 178, 61);
+}
