--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -15,13 +15,13 @@
 .shop-header h1 {
   margin: 0;
   font-size: 2rem;
-  color: #2e7d32; /* plant green */
-}
-
-.shop-coins {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+  width:fit-content;
+  color: #2e7d32;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-decoration:underline;
+  text-decoration-style: wavy;
+  text-decoration-thickness:5%;
+  text-underline-offset: 15%;
 }
 
 .shop-message {
@@ -29,22 +29,64 @@
   font-weight: 500;
 }
 
+.shop-header .statistic {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color:#ffffff9f;
+  border-radius: 20px;
+  padding: 1%;
+  vertical-align: middle;
+  border-color: #00000090;
+  border-style: solid;
+  width:15%;
+  text-align: center;
+  font-weight:bold;
+  margin:2%
+}
+
+.shop-header .button {
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 1%;
+  height:50px;
+  width: 15%;
+  font-size:small;
+  margin:2%;
+}
+
+.shop-card {
+  width: fit-content;
+  height:fit-content;
+  margin:2%;
+  
+}
+
 .shop-card .content {
   min-height: 220px;
   background-color: beige;
-  padding: 10%;
   border-radius: 20px;
-  align-items: center;
+  text-align: center;
+  justify-items: center;
+  padding: 5%;
   width: fit-content;
+  aspect-ratio: 1/1;
+  vertical-align:middle; 
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  
 }
 
 .shop-card .emoji {
-  font-size: 5rem;
-  margin: 1rem 0;
+  font-size: 300%;
+  margin: 1%;
   border-radius: 50%;
-  background-color: #2e7d32;
+  border-color: #2e7d43;
+  background-color: #dff2cb;
+  border-width: 400%;
+  border-style: solid;
   align-content: center;
-  width:fit-content;
+  text-align: center;
+  border-radius:100%;
+  border-width: 100%;
+  padding: 5%;
   aspect-ratio: 1/1;
 }
 
@@ -52,6 +94,7 @@
   font-size: 1.3rem;
   font-weight: bold;
   color: #388e3c;
+  
 }
 
 .shop-card .meta {
@@ -74,9 +117,11 @@
 .shop-card button {
   font-weight: 600;
   border-radius: 5px;
-  width: 20%;
+  width: 60%;
+  height:10%;
   font-size:small;
   border-spacing: 20px;
+  margin:2%;
 }
 
 .blur {
