--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 import
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -12,6 +13,19 @@ import
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-image: url('natalie-kovach-ph7QQq63lCs-unsplash.jpg'); /* path inside public/images */
+  background-size: cover;       /* scale to cover screen */
+  background-position: center;  /* center the image */
+  background-repeat: no-repeat; /* prevent tiling */
+  font-family: 'Segoe UI', sans-serif;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
 }
 
 .App-header {
