--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,16 @@
     margin-bottom: 10px;
 }
 
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(121, 206, 75, 0.738),rgba(121, 206, 75, 0.621)), url('natalie-kovach-ph7QQq63lCs-unsplash.jpg');
+  background-size: cover;       /* scale to cover screen */
+  background-position: center;  /* center the image */
+  background-repeat: no-repeat; /* prevent tiling */
+  font-family: 'Segoe UI', sans-serif;
+}
+
 .modal {
     margin-left: auto;
     margin-right: auto;
