--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-import
 .App {
   text-align: center;
-   background-image: linear-gradient(rgba(121, 206, 75, 0.738),rgba(121, 206, 75, 0.621)), url('natalie-kovach-ph7QQq63lCs-unsplash.jpg');
+  background-image: url('natalie-kovach-ph7QQq63lCs-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -18,17 +22,16 @@ import
 body {
   margin: 0;
   min-height: 100vh;
- background-image: linear-gradient(rgba(121, 206, 75, 0.738),rgba(121, 206, 75, 0.621)), url('natalie-kovach-ph7QQq63lCs-unsplash.jpg');  background-size: cover;       /* scale to cover screen */
-  background-position: center;  /* center the image */
-  background-repeat: no-repeat; /* prevent tiling */
+  background-image: url('natalie-kovach-ph7QQq63lCs-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: 'Segoe UI', sans-serif;
-  justify-content: center;
-  justify-items: center;
-  justify-self: center;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #386641;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,7 +41,7 @@ body {
 }
 
 .App-link {
-  color: #61dafb;
+  color: #a7c957;
 }
 
 @keyframes App-logo-spin {
